--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -57,7 +57,7 @@
             </div>
             {% for formation in indexFormation %}
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">{{ formation.name }} / {#<small>(Nbre) Elèves Inscrit</small>#}</li>
+                <li class="list-group-item">{{ formation.name }} {#/ <small>(Nbre) Elèves Inscrit</small>#}</li>
               </ul>
             {% endfor %}
           </div>
