--- a/templates/school/view_student.html.twig
+++ b/templates/school/view_student.html.twig
@@ -60,7 +60,7 @@ h2{
           </tr>
 
           <tr>
-            <th class="text-danger">Code postale :</th>
+            <th class="text-danger">Code postal :</th>
             <td>{{users.zipcode}}</td>
           </tr>
 
