maj final school
maj final bsx les poulets

--- a/templates/school/index.html.twig
+++ b/templates/school/index.html.twig
@@ -12,7 +12,7 @@ h1{
   font-size:4rem;
   background-color:#b54447;
   color:white;
-  
+
 }
 h2,p{
 color:#b54447;
@@ -46,20 +46,22 @@ background:#b54447;
     <img src="{{asset('assets/img/fondPrincipal.png')}}" class="img-fluid" alt="fond ecran principal">
   </div>
   <div class="containerSlogan container">
-    <p class="slogan">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+    <p class="slogan">RGB Web tu as tous ce qu'il faut !
     </p>
     <p class="text-muted">
-      totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-      explicabo.
+      Nous allons donc nous concentrer sur la prise en main des fonctionnalités essentielles du back office.
+      Une fois connecté dans cet espace, nous pourrons alors :
+      <ul>
+      <li>Gérer le contenu de utilisateurs </li>
+      <li>Accédez aux messages déposés par les étudiants</li>
+      <li>Modifier les données des utlisateurs</li>
+      <li>Rechercher par filtre dans la base de donnée</li>
+      </ul>
     </p>
   </div>
 </div>
 
-<div class="container">
-  <a id="rond" class="btn text-light btnChasse rounded-pill" href="{{ path('home_index') }}">Retour au site
-    principal</a>
-  <img src="{{asset('assets/img/index.png')}}" class="mt-1" alt="icon bdd">
-</div>
+
 
 <div class="row text-center">
   <div class="col-sm-12 col-md-12 col-12">
@@ -67,8 +69,7 @@ background:#b54447;
   </div>
   <div class="container">
     <div class="d-flex justify-content-center">
-      <p class="text-muted w-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quos quaerat sapiente
-        nam, id vero
+      <p class="text-muted w-50"> Nous allons donc nous concentrer sur la prise en main des fonctionnalités essentielles du back office.<br>Gérer le contenu de utilisateurs
       </p>
     </div>
   </div>
@@ -87,7 +88,7 @@ background:#b54447;
             <strong>
               Accedez au registre d'utlisateurs</strong>
           </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+          <p>Nous allons donc nous concentrer sur la prise en main des fonctionnalités essentielles du back office.<br>Gérer le contenu de utilisateurs</p>
         </div>
       </a>
     </div>
@@ -104,7 +105,7 @@ background:#b54447;
             </div>
             <img src="{{asset('assets/img/student.png')}}" class="mb-5" alt="icon eleve">
             <h2><strong> Inscription élèves</strong></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+            <p>Nous allons donc nous concentrer sur la prise en main des fonctionnalités essentielles du back office.<br>Ajouter des utlisateurs aux bases de données de l'école. </p>
           </div>
         </a>
       </div>
@@ -120,7 +121,7 @@ background:#b54447;
             </div>
             <img src="{{asset('assets/img/ent.png')}}" class="mb-5" alt="icon entreprise">
             <h2><strong> Inscription Entreprise </strong></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+           <p>Nous allons donc nous concentrer sur la prise en main des fonctionnalités essentielles du back office.<br>Ajouter des utlisateurs aux bases de données de l'école. </p>
           </div>
         </a>
       </div>
@@ -136,7 +137,7 @@ background:#b54447;
             </div>
             <img src="{{asset('assets/img/message.png')}}" class="mb-5" alt="icon message">
             <h2><strong>Boite de reception</strong></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, tempora.</p>
+           <p>Nous allons donc nous concentrer sur la prise en main des fonctionnalités essentielles du back office.<br>Accédez aux messages déposés par les étudiants</p>
           </div>
         </a>
       </div>
