--- a/templates/school/view_message.html.twig
+++ b/templates/school/view_message.html.twig
@@ -33,7 +33,7 @@ background-color:#d9d9d9;
   <div class="container  justify-content-center my-5">
   <div class="row">
     <div class="col ">
-        
+
       <form method="post" class="justify-content-center mt-5">
          <table class="table">
         <tbody>
@@ -53,12 +53,12 @@ background-color:#d9d9d9;
           </tr>
           </tbody>
         </table>
-         
+
       </form>
     </div>
   </div>
 </div>
-<a href="{{ path('school_index') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}"  class="m-5 bg-warning p-4" alt="icon bdd"></a>
+<a href="{{ path('list_message') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}"  class="m-3 bg-warning p-2" alt="icon bdd"></a>
 
 
 {% endblock %}
