--- a/templates/school/view_student.html.twig
+++ b/templates/school/view_student.html.twig
@@ -36,7 +36,7 @@ h2{
 
 <div class="container justify-content-center my-5 ">
   <div class="row">
-    <div class="col-6 justify-content-center">
+    <div class="col justify-content-center">
 
      <form method="post" class="my-5 justify-content-center">
       <h2 class="text-center">{{users.firstname}}  {{users.lastname}}</h2><br>
@@ -95,12 +95,12 @@ h2{
           </tr>
           </tbody>
         </table><br>
-              
+
               <a type="submit" class="btn btn-outline-success" href="{{ path('modif_student', {id: users.id}) }}" class="text-light">modifier</a>
       </form>
     </div>
   </div>
 </div>
-<a href="{{ path('list_valid') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}" class="m-5 bg-warning p-4" alt="icon bdd"></a>
+<a href="{{ path('list_valid') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}"  class="m-3 bg-warning p-2" alt="icon bdd"></a>
 
 {% endblock %}
