--- a/templates/school/list_valid.html.twig
+++ b/templates/school/list_valid.html.twig
@@ -54,7 +54,7 @@
     {% endblock styles %}
 
     <h1 class="text-center my-5">
-      <strong>Registre d'utilisateurs</strong><a href="{{ path('list_valid') }}">
+      <strong>Registre d'utilisateurs</strong><a href="{{ path('school_index') }}">
         <img src="{{asset('assets/img/ent.png')}}" class=" m-5" alt="icon bdd"></a>
     </h1>
     <br>
