--- a/templates/school/delete_ent.html.twig
+++ b/templates/school/delete_ent.html.twig
@@ -110,6 +110,6 @@ color: #4285F4;
 		</div>
 	</div>
 </div>
-<a class="text-info"><img src="{{asset('assets/img/back.png')}}" href="{{ path('list_valid') }}" class="m-5 bg-warning p-4" alt="icon bdd"></a>
+ <a href="{{ path('list_valid') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}"  class="m-3 bg-warning p-2" alt="icon bdd"></a>
 
 {% endblock %}
