--- a/templates/school/delete_student.html.twig
+++ b/templates/school/delete_student.html.twig
@@ -92,7 +92,7 @@ color: #4285F4;
 						<p class="text-center h4">Supprimer cet utilisateur ?</p>
 						<div class="d-flex">
 							<div class="mx-auto my-5">
-								
+
 								<input type="hidden" name="delete" value="yes">
 								<button type="submit" class="btn btn-outline-danger">Supprimer</button>
 							</div>
@@ -102,7 +102,7 @@ color: #4285F4;
 			</div>
 		</div>
 	</div>
-  <a class="text-info"><img src="{{asset('assets/img/back.png')}}" href="{{ path('list_valid') }}" class="m-5 bg-warning p-4" alt="icon bdd"></a>
+  <a href="{{ path('list_valid') }}" class="text-info"><img src="{{asset('assets/img/back.png')}}"  class="m-3 bg-warning p-2" alt="icon bdd"></a>
 
 {% endblock %}
 
