--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,43 +12,6 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-    <style type="text/css">
-    /* BUTTON */
-
-.up:hover,
-.up:focus {
-  box-shadow: inset 0 -3.25em 0 0 var(--hover);
-}
-
-.up {
-  --color: #19bc8b;
-  --hover: #1973bc;
-}
-
-button {
-  color: var(--color);
-  -webkit-transition: 0.25s;
-  transition: 0.25s;
-  border-radius: 5px;
-}
-button:hover, button:focus {
-  border-color: var(--hover);
-  color: #fff;
-  border-radius: 10px;
-}
-
-button {
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
-}
-    </style>
-
-
-
     {% block stylesheets %}{% endblock %}
 </head>
 
@@ -150,8 +113,8 @@ button {
           {% if app.user %}
           <a type="button" class="btn btn-outline-warning nav-link ml-2" href="{{ path('app_logout') }}">Deconnexion</a>
           {% else %}
-            <a href="{{ path('app_login')}}" class="btn btn-lg btn-info">Connexion</a>
-            <a href="{{ path('home_registration')}}" class="btn btn-lg btn-warning ml-2">Inscription</a>
+            <a href="{{ path('app_login')}}" class="btn btn-lg btnConnexion">Connexion</a>
+            <a href="{{ path('home_registration')}}" class="btn btn-lg btnInscription ml-2">Inscription</a>
           {% endif %}
         </div>
 
