--- a/templates/school/list_valid.html.twig
+++ b/templates/school/list_valid.html.twig
@@ -92,8 +92,8 @@
                   <td>{{ent.zipcodePro}}</td>
                   <td>{{ent.cityPro}}</td>
                   <td>{{ent.phonePro}}</td>
-                  <td>{{ent.web}}</td>
-                  <td>{{ent.email}}</td>
+                  <td>{{ent.emailPro}}</td>
+                  <td>{{ent.webPro}}</td>
                   <td>{{ent.connect}}</td>
                   <td>
                     <a class="btn btn-info btn-sm" href="{{ path('view_ent', {id: ent.id}) }}" class="text-info">entreprise</a>
