--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -165,8 +165,6 @@ font-size: 1.8em;
     }
   }
 
-
-
 h2 {
     font-size:1.5em;
   }
@@ -213,8 +211,6 @@ h2 {
 .jsb_holder{
     border:none !important;
     padding: 4px;
-    border-radius: 15px;
-    padding: 10px;
 }
 .jsb_btn{
     margin-top:22px;
@@ -257,7 +253,7 @@ iframe{
 }
 .actuality{
     margin-top: 7px !important;
-    max-height: 877px;
+    max-height: 925px;
     width: 718px;
     overflow: scroll;
     overflow-x: hidden;
@@ -266,19 +262,28 @@ iframe{
     scrollbar-color: #4285f4;
     scrollbar-width: thin;
 }
-.actuality h2{
-    font-size: 1.5em;
-}
 .custom-file-label{
     font-size: 0.9em;
 }
 .form-bg{
-    margin-top: 41px;
+    margin-top: 10px;
 }
 .btnProposerEntreprise{
     background-color: #4285f4;
     color: white;
 }
-#actuality hr{
-    margin-bottom: 50px ;
+
+.btnConnexion{
+    background-color: #007BFF;
 }
+.btnInscription{
+    background-color: white;
+}
+.btnInscription:hover {
+    transition: all 1s ease-out;
+    background-color: rgba(192, 182, 182, 0.596);
+    }
+.btnConnexion:hover {
+    transition: all 1s ease-out;
+    background-color: rgb(107, 162, 221);
+    }
